cif/org.eclipse.escet.cif.tests/tests/event_based/supervisor_synthesis/initial_nondeterministic.run.err
ERROR: Failed to create supervisor for CIF file "event_based/supervisor_synthesis/initial_nondeterministic.cif".
CAUSE: CIF supervisor synthesis tool failed due to unsatisfied preconditions:

  ----------------------------------------
  (1/1) An automaton is non-deterministic.
  ----------------------------------------
   * In automaton "p":
     - edge e;
            ^
     - edge e;
            ^
